[package]
name = "get-random"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
get-random-common = { path = "../get-random-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.3"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"

[[bin]]
name = "get-random"
path = "src/main.rs"
